rocketchat/Deployment-mongo.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: pocketchat-db
  labels:
    app: pocketchat-db
spec:
  replicas: 1
  selector:
    app: pocketchat-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pocketchat-db
    spec:
      containers:
        - name: pocketchat-db
          image: docker.io/mongo:4.0
          command:
            - /bin/sh
            - -c 
            - mongod --bind_ip 0.0.0.0 --port 27017 --smallfiles --oplogSize 128 --replSet rs0 --storageEngine=mmapv1
          volumeMounts:
            - name: pocketchat-data-vol
              mountPath: /data/db
          ports:
            - containerPort: 27017
              protocol: TCP
          readinessProbe:
            exec:
              command:
                  - /bin/sh
                  - -c
                  - "mongo --eval \"rs.initiate({_id: 'rs0', members: [{_id:0, host:'localhost:27017'}]})\""
            initialDelaySeconds: 30
            periodSeconds: 2
            timeoutSeconds: 1
            successThreshold: 3
            failureThreshold: 10
      restartPolicy: Always
      volumes:
        - name: pocketchat-data-vol
          persistentVolumeClaim:
            claimName: pocketchat-data-claim
