rocketchat/Deployment-rocket.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: pocketchat
  labels:
    app: pocketchat
spec:
  replicas: 1
  selector:
    app: pocketchat
  template:
    metadata:
      labels:
        app: pocketchat
    spec:
      containers:
        - name: pocketchat
          image: rocket.chat:2.4.9
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
      restartPolicy: Always
