rocketchat/Service-mongo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pocket-chat-db
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: pocketchat-db
