rocketchat/Service-rocket.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pocket-chat
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: pocketchat
