rocketchat/Route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pocket-chat
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: pocket-chat
    weight: 100
  wildcardPolicy: None
